inital styling / items

--- a/index.html
+++ b/index.html
@@ -8,8 +8,59 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>header</header>
-    <nav>nav</nav>
-    <main>main</main>
+    <header>
+        <div>
+            <img class="iconimg" src="./searchic.png" alt="search icon">
+            <input type="text" placeholder="Search..">
+            <img  class="profileimg" src="./cat.png" alt="profile pic">
+            <p>Hi There,<br>Michael Tawil(@Mike)</p>
+        </div>
+        <div>
+            <img class="iconimg" src="./bell.png" alt="">
+            <img class="profileimg" src="./cat.png" alt="profile pic">
+            <h3>Michael Tawil</h3>
+        <div>
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+        </div>
+        </div>
+    </header>
+    <nav>
+        <div>
+            <h2>Dashboard</h2>
+        </div>
+        <div>
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </div>
+    </nav>
+    <main>
+        <div>
+            <div>Card1</div>
+            <div>Card1</div>
+            <div>Card1</div>
+            <div>Card1</div>
+            <div>Card1</div>
+            <div>Card1</div>
+        </div>
+        <div>
+            <div>announcment</div>
+            <div>trending</div>
+        </div>
+    </main>
 </body>
 </html>
