--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +10,13 @@
 </head>
 <body>
     <header>
-        <div>
+        <div id="hdiv1">
             <img class="iconimg" src="./searchic.png" alt="search icon">
             <input type="text" placeholder="Search..">
             <img  class="profileimg" src="./cat.png" alt="profile pic">
             <p>Hi There,<br>Michael Tawil(@Mike)</p>
         </div>
-        <div>
+        <div id="hdiv2">
             <img class="iconimg" src="./bell.png" alt="">
             <img class="profileimg" src="./cat.png" alt="profile pic">
             <h3>Michael Tawil</h3>
@@ -27,29 +28,23 @@
         </div>
     </header>
     <nav>
-        <div>
-            <h2>Dashboard</h2>
-        </div>
-        <div>
-            <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
-            </ul>
-        </div>
-        <div>
-            <ul>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
-            </ul>
-        </div>
+        <h1> DashBoard</h1>
+        <ul>
+            <li><img class ="iconimg" src="./home.png" /> Home</li>
+            <li><img class ="iconimg" src="./profileic.png" /> Profile</li>
+            <li><img class ="iconimg" src="./msg.png" /> Messages</li>
+            <li><img class ="iconimg" src="./his.png" /> History</li>
+            <li><img class ="iconimg" src="./tasks.png" /> Tasks</li>
+            <li><img class ="iconimg" src="./com.png" /> Communities</li>
+        </ul>
+        <ul>
+            <li><img class ="iconimg" src="./settings.png" /> Settings</li>
+            <li><img class ="iconimg" src="./sup.png" /> Support</li>
+            <li><img class ="iconimg" src="./sec.png" /> Privacy</li>
+        </ul>
     </nav>
     <main>
-        <div>
+        <div id="mdiv1">
             <div>Card1</div>
             <div>Card1</div>
             <div>Card1</div>
@@ -57,7 +52,7 @@
             <div>Card1</div>
             <div>Card1</div>
         </div>
-        <div>
+        <div id="mdiv2">
             <div>announcment</div>
             <div>trending</div>
         </div>
