redesign header and nav

--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
 </head>
 <body>
     <header>
-        <div id="hdiv1">
+        <div class="searchcont">
             <img class="iconimg" src="./searchic.png" alt="search icon">
-            <input type="text" placeholder="Search..">
+            <input type="text">
+        </div>
+        <div class="profilecont">
             <img  class="profileimg" src="./cat.png" alt="profile pic">
+            <img class="iconimg" src="./bell.png" alt="">
+            <h3>Michael Tawil</h3>
+        </div>
+
+        <div class="welcomecont">
+            <img class="profileimg" src="./cat.png" alt="profile pic">
             <p>Hi There,<br>Michael Tawil(@Mike)</p>
         </div>
-        <div id="hdiv2">
-            <img class="iconimg" src="./bell.png" alt="">
-            <img class="profileimg" src="./cat.png" alt="profile pic">
-            <h3>Michael Tawil</h3>
-        <div>
+        <div class="buttoncont">
             <button>New</button>
             <button>Upload</button>
             <button>Share</button>
-        </div>
         </div>
     </header>
     <nav>
@@ -45,16 +48,16 @@
     </nav>
     <main>
         <div id="mdiv1">
-            <div>Card1</div>
-            <div>Card1</div>
-            <div>Card1</div>
-            <div>Card1</div>
-            <div>Card1</div>
-            <div>Card1</div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
         <div id="mdiv2">
-            <div>announcment</div>
-            <div>trending</div>
+            <div></div>
+            <div></div>
         </div>
     </main>
 </body>
