--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
         </ul>
     </nav>
     <main>
-        <div id="mdiv1">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="mdiv div1">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
         </div>
-        <div id="mdiv2">
-            <div></div>
-            <div></div>
+        <div class="mdiv div2">
+            <div class="card"></div>
+            <div class="card"></div>
         </div>
     </main>
 </body>
