okay coloring / done main cards

--- a/index.html
+++ b/index.html
@@ -48,16 +48,18 @@
     </nav>
     <main>
         <div class="mdiv div1">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card"><div class="sideborder"></div></div>
+            <div class="card"><div class="sideborder"></div></div>
+            <div class="card"><div class="sideborder"></div></div>
+            <div class="card"><div class="sideborder"></div></div>
+            <div class="card"><div class="sideborder"></div></div>
+            <div class="card"><div class="sideborder"></div></div>
         </div>
         <div class="mdiv div2">
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card"><h2>Trending</h2><p>Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Viverra vitae congue eu consequat ac felis donec et. Sollicitudin nibh sit amet commodo. Sollicitudin aliquam ultrices sagittis orci. Morbi tempus iaculis urna id volutpat lacus laoreet. Convallis tellus id interdum velit laoreet. Morbi enim nunc faucibus a pellentesque. Ornare arcu dui vivamus arcu. Non odio euismod lacinia at quis.
+                Platea dictumst vestibulum rhoncus est pellentesque. Ornare massa eget egestas purus viverra accumsan in. Lacus luctus accumsan tortor posuere. Adipiscing diam donec adipiscing tristique risus. Ac orci phasellus egestas tellus rutrum.</p></div>
+            <div class="card"><h2>Announcments</h2><p>Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Viverra vitae congue eu consequat ac felis donec et. Sollicitudin nibh sit amet commodo. Sollicitudin aliquam ultrices sagittis orci. Morbi tempus iaculis urna id volutpat lacus laoreet. Convallis tellus id interdum velit laoreet. Morbi enim nunc faucibus a pellentesque. Ornare arcu dui vivamus arcu. Non odio euismod lacinia at quis
+                Platea dictumst vestibulum rhoncus est pellentesque. Ornare massa eget egestas purus viverra accumsan in. Lacus luctus accumsan tortor posuere. Adipiscing diam donec adipiscing tristique risus. Ac orci phasellus egestas tellus rutrum.</p></div>
         </div>
     </main>
 </body>
